add new key CL_DV_TD_child_lock_tip

--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -2234,7 +2234,7 @@
     "rf_ice_maker_desc": "Позволява ви да включвате/изключвате ледогенератора на вашия хладилник.",
     "diagnosing": "Диагностициране...",
     "new_device_found": "Намерено е ново устройство",
-    "new_device_found_tips": "Намерено е ново устройство, изберете „ЗАДАВАНЕ на Wi-Fi“, за да свържете устройството си към мрежата.",
+    "new_device_found_tips": "Намерено е ново устройство, изберете “НАСТРОЙКА Wi-Fi“, за да свържете устройството си към мрежата.",
     "set_wifi_uppercase": "НАСТРОЙКА Wi-Fi",
     "full": "Пълна",
     "usage_frequency_metrics": "Показатели за честота на използване",
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "когато ## е @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
-    "enter_city_key": "Въведете град…",
+    "enter_city_key": "Търсене на град",
     "add_key": "Добави",
     "select_logic_relation_ship": "Изберете логическа връзка",
     "no_scene_key": "няма сцена",
@@ -4003,5 +4003,23 @@
     "CL_DV_OV_check_to_confirm": "Проверете фурната, за да потвърдите.",
     "CL_CF_CO_buy": "Купете",
     "CL_CF_CS_window_ac_step_2": "Натиснете и задръжте бутона „свързване“ за около 6 секунди или насочете дистанционното управление към приемника и натиснете бутона „люлеене“ 6 пъти, докато дисплеят покаже „77“ или WiFi светлината започне да мига.",
-    "CL_DV_OV_default_cooking_intensity": "ИНТЕНЗИТЕТ НА ГОТВЕНЕ ПО ПОДРАЗБИРАНЕ"
+    "CL_DV_OV_default_cooking_intensity": "ИНТЕНЗИТЕТ НА ГОТВЕНЕ ПО ПОДРАЗБИРАНЕ",
+    "CL_DV_HOB_residual_heat_title_pop": "Остатъчна топлина",
+    "CL_DV_HOB_residual_heat_content_pop": "Зоната за готвене е все още гореща. Внимавайте да не докосвате горещата зона за готвене и да не поставяте чувствителни на топлина предмети върху нея.",
+    "CL_DV_HOB_hood_mode_setting": "Настройки на режим аспиратор",
+    "CL_DV_HOB_refresh_mode_setting": "Настройки на режима на обновяване",
+    "CL_DV_HOB_grease_filter_profile": "Опции за профил на филтър за мазнини",
+    "CL_DV_HOB_hood_mode_setting_content": "Задайте режима на аспиратора. Когато аспираторът е в автоматичен режим, той ще започне веднага щом започне процесът на готвене.",
+    "CL_DV_HOB_hood_mode_setting_hint": "Ако автоматичният режим е изключен, режимът ще бъде ръчен.",
+    "CL_DV_HOB_automatic_mode": "Автоматичен режим",
+    "CL_DV_HOB_refresh_setting_hint": "Ако режимът на опресняване е включен, уредът автоматично ще започне да използва режим на опресняване, когато аспираторът е активен.",
+    "CL_DV_HOB_grease_filter_profile_content": "Задайте дълготрайността на филтъра за мазнини. \n\n P1 се използва предимно за варене и леко пържене. P2 се използва за балансирано варене и средно пържене. P3 се използва за силно пържене.",
+    "CL_DV_HOB_hood_mode_manual": "Ръководство",
+    "CL_DV_HOB_remove_accessory_content": "Сигурни ли сте, че искате да премахнете този аксесоар?",
+    "CL_DV_HOB_remove_accessory_tips": "когато премахнете вашия аксесоар, вече няма да получавате актуализации на фърмуера за него.",
+    "CL_DV_HOB_clean_filter": "ПОЧИСТИХТЕ ЛИ ФИЛТЪРА?",
+    "CL_DV_HOB_clean_filter_content": "Нулирайте таймера, след като сте почистили филтъра.",
+    "CL_DV_HOB_more_update": "xx още актуализация",
+    "CL_DV_TD_child_lock_tip": "Защитата за деца деактивира бутоните на контролния панел на уреда, за да предотврати случайно стартиране или промяна на цикъл от деца. ",
+    "API Testing": "API тестване"
 }
