--- a/language/i18n_es.json
+++ b/language/i18n_es.json
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "cuando ## es @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
-    "enter_city_key": "Ingrese la ciudad…",
+    "enter_city_key": "Buscar ciudad",
     "add_key": "Agregar",
     "select_logic_relation_ship": "Seleccione la relación lógica",
     "no_scene_key": "sin escena",
@@ -4003,5 +4003,23 @@
     "CL_DV_OV_check_to_confirm": "Revisa el horno para confirmar.",
     "CL_CF_CO_buy": "Comprar",
     "CL_CF_CS_window_ac_step_2": "Mantenga presionado el botón “conectar” durante aproximadamente 6 segundos, o apunte el control remoto al receptor y presione el botón “oscilación” 6 veces, hasta que la pantalla muestre “77” o la luz WiFi comience a parpadear.",
-    "CL_DV_OV_default_cooking_intensity": "INTENSIDAD DE COCCIÓN PREDETERMINADA"
+    "CL_DV_OV_default_cooking_intensity": "INTENSIDAD DE COCCIÓN PREDETERMINADA",
+    "CL_DV_HOB_residual_heat_title_pop": "Calor residual",
+    "CL_DV_HOB_residual_heat_content_pop": "La zona de cocción todavía está caliente. Tenga cuidado de no tocar la zona de cocción caliente ni colocar sobre ella elementos sensibles al calor.",
+    "CL_DV_HOB_hood_mode_setting": "Configuración del modo de capota",
+    "CL_DV_HOB_refresh_mode_setting": "Configuración del modo de actualización",
+    "CL_DV_HOB_grease_filter_profile": "Opciones de perfil de filtro de grasa",
+    "CL_DV_HOB_hood_mode_setting_content": "Ajuste el modo de la campana. Cuando la campana está en modo automático, se pondrá en marcha tan pronto como comience el proceso de cocción.",
+    "CL_DV_HOB_hood_mode_setting_hint": "Si el modo automático está desactivado, el modo será manual.",
+    "CL_DV_HOB_automatic_mode": "Modo automático",
+    "CL_DV_HOB_refresh_setting_hint": "Si el modo de actualización está activado, el aparato comenzará a utilizar automáticamente el modo de actualización cuando la campana esté activa.",
+    "CL_DV_HOB_grease_filter_profile_content": "Establecer la longevidad del filtro de grasa. \n\n P1 se utiliza principalmente para hervir y freír ligeramente. P2 se utiliza para hervir de forma equilibrada y freír de forma media. P3 se utiliza para freír con fuerza.",
+    "CL_DV_HOB_hood_mode_manual": "Manual",
+    "CL_DV_HOB_remove_accessory_content": "¿Estás seguro de que deseas eliminar este accesorio?",
+    "CL_DV_HOB_remove_accessory_tips": "Cuando retires tu accesorio, ya no recibirás actualizaciones de firmware para él.",
+    "CL_DV_HOB_clean_filter": "¿HAS LIMPIADO EL FILTRO?",
+    "CL_DV_HOB_clean_filter_content": "Reinicie el temporizador después de haber limpiado el filtro.",
+    "CL_DV_HOB_more_update": "xx más actualizaciones",
+    "CL_DV_TD_child_lock_tip": "El bloqueo para niños desactiva los botones del panel de control del aparato para evitar que los niños inicien o cambien un ciclo accidentalmente. ",
+    "API Testing": "Pruebas API"
 }
