--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -2234,7 +2234,7 @@
     "rf_ice_maker_desc": "به شما امکان می دهد یخ ساز یخچال خود را روشن/خاموش کنید.",
     "diagnosing": "در حال تشخیص ...",
     "new_device_found": "دستگاه جدید پیدا شد",
-    "new_device_found_tips": "دستگاه جدیدی پیدا شد، برای اتصال دستگاه خود به شبکه، «SET Wi-Fi» را انتخاب کنید.",
+    "new_device_found_tips": "دستگاه جدیدی پیدا شد، برای اتصال دستگاه خود به شبکه، «Wi-Fi را تنظیم کنید» را انتخاب کنید.",
     "set_wifi_uppercase": "Wi-Fi را تنظیم کنید",
     "full": "تکمیل",
     "usage_frequency_metrics": "usage_frequency_metrics",
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "وقتی ## است @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
-    "enter_city_key": "شهر را وارد کنید…",
+    "enter_city_key": "شهر را جستجو کنید",
     "add_key": "اضافه کردن",
     "select_logic_relation_ship": "انتخاب رابطه منطقی",
     "no_scene_key": "صحنه ای نیست",
@@ -4003,5 +4003,23 @@
     "CL_DV_OV_check_to_confirm": "برای تایید فر را چک کنید.",
     "CL_CF_CO_buy": "خرید کنید",
     "CL_CF_CS_window_ac_step_2": "دکمه \"connect\" را برای تقریباً 6 ثانیه فشار دهید و نگه دارید، یا کنترل از راه دور را به سمت گیرنده بگیرید و دکمه \"swing\" را 6 بار فشار دهید تا زمانی که صفحه نمایش \"77\" را نشان دهد یا چراغ WiFi شروع به چشمک زدن کند.",
-    "CL_DV_OV_default_cooking_intensity": "شدت پخت پیش‌فرض"
+    "CL_DV_OV_default_cooking_intensity": "شدت پخت پیش‌فرض",
+    "CL_DV_HOB_residual_heat_title_pop": "گرمای باقیمانده",
+    "CL_DV_HOB_residual_heat_content_pop": "منطقه پخت هنوز گرم است. مراقب باشید به منطقه پخت داغ دست نزنید یا مواد حساس به حرارت را روی آن قرار ندهید.",
+    "CL_DV_HOB_hood_mode_setting": "تنظیمات حالت هود",
+    "CL_DV_HOB_refresh_mode_setting": "تنظیمات حالت بازخوانی",
+    "CL_DV_HOB_grease_filter_profile": "گزینه های پروفایل فیلتر روغن",
+    "CL_DV_HOB_hood_mode_setting_content": "حالت هود را تنظیم کنید. هنگامی که هود در حالت اتوماتیک است، به محض شروع فرآیند پخت شروع به کار می کند.",
+    "CL_DV_HOB_hood_mode_setting_hint": "اگر حالت خودکار خاموش باشد، حالت دستی خواهد بود.",
+    "CL_DV_HOB_automatic_mode": "حالت خودکار",
+    "CL_DV_HOB_refresh_setting_hint": "اگر حالت تازه‌سازی روشن باشد، وقتی هود فعال است، دستگاه به‌طور خودکار شروع به استفاده از حالت تازه‌سازی می‌کند.",
+    "CL_DV_HOB_grease_filter_profile_content": "طول عمر فیلتر چربی را تنظیم کنید. \n\n P1 عمدتا برای جوشاندن و سرخ کردن سبک استفاده می شود. P2 برای جوشاندن متعادل و سرخ کردن متوسط ​​استفاده می شود. P3 برای سرخ کردن سنگین استفاده می شود.",
+    "CL_DV_HOB_hood_mode_manual": "دستی",
+    "CL_DV_HOB_remove_accessory_content": "آیا مطمئن هستید که می خواهید این لوازم جانبی را حذف کنید؟",
+    "CL_DV_HOB_remove_accessory_tips": "هنگامی که لوازم جانبی خود را حذف می کنید، دیگر به روز رسانی سیستم عامل آن را دریافت نخواهید کرد.",
+    "CL_DV_HOB_clean_filter": "آیا فیلتر را تمیز کرده اید؟",
+    "CL_DV_HOB_clean_filter_content": "پس از تمیز کردن فیلتر، تایمر را ریست کنید.",
+    "CL_DV_HOB_more_update": "xx آپدیت بیشتر",
+    "CL_DV_TD_child_lock_tip": "قفل کودک دکمه های روی صفحه کنترل دستگاه را غیرفعال می کند تا از شروع یا تغییر تصادفی چرخه توسط کودکان جلوگیری کند. ",
+    "API Testing": "تست API"
 }
