--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "언제 ## 입니다 @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
-    "enter_city_key": "도시를 입력하십시오…",
+    "enter_city_key": "도시 검색",
     "add_key": "추가",
     "select_logic_relation_ship": "논리 관계 선택",
     "no_scene_key": "장면 없음",
@@ -4003,5 +4003,23 @@
     "CL_DV_OV_check_to_confirm": "오븐을 확인하여 확인하세요.",
     "CL_CF_CO_buy": "구입하다",
     "CL_CF_CS_window_ac_step_2": "\"연결\" 버튼을 약 6초간 길게 누르거나, 리모컨을 수신기에 대고 \"스윙\" 버튼을 6번 눌러 디스플레이에 \"77\"이 표시되거나 WiFi 표시등이 깜박일 때까지 누릅니다.",
-    "CL_DV_OV_default_cooking_intensity": "기본 조리 강도"
+    "CL_DV_OV_default_cooking_intensity": "기본 조리 강도",
+    "CL_DV_HOB_residual_heat_title_pop": "잔여열",
+    "CL_DV_HOB_residual_heat_content_pop": "쿠킹 존은 아직 뜨겁습니다. 뜨거운 쿠킹 존을 만지거나 열에 민감한 물건을 올려놓지 않도록 주의하세요.",
+    "CL_DV_HOB_hood_mode_setting": "후드 모드 설정",
+    "CL_DV_HOB_refresh_mode_setting": "새로 고침 모드 설정",
+    "CL_DV_HOB_grease_filter_profile": "그리스 필터 프로필 옵션",
+    "CL_DV_HOB_hood_mode_setting_content": "후드 모드를 설정합니다. 후드가 자동 모드에 있으면 조리 과정이 시작되자마자 시작됩니다.",
+    "CL_DV_HOB_hood_mode_setting_hint": "자동 모드가 꺼져 있으면 수동 모드가 됩니다.",
+    "CL_DV_HOB_automatic_mode": "자동 모드",
+    "CL_DV_HOB_refresh_setting_hint": "새로 고침 모드가 켜져 있는 경우, 후드가 작동하면 기기가 자동으로 새로 고침 모드를 시작합니다.",
+    "CL_DV_HOB_grease_filter_profile_content": "그리스 필터의 수명을 설정합니다. \n\n P1은 주로 끓이고 가볍게 튀기는 데 사용됩니다. P2는 균형 잡힌 끓이고 보통 튀기는 데 사용됩니다. P3은 강하게 튀기는 데 사용됩니다.",
+    "CL_DV_HOB_hood_mode_manual": "수동",
+    "CL_DV_HOB_remove_accessory_content": "이 액세서리를 제거하시겠습니까?",
+    "CL_DV_HOB_remove_accessory_tips": "액세서리를 제거하면 해당 펌웨어 업데이트를 더 이상 받을 수 없습니다.",
+    "CL_DV_HOB_clean_filter": "필터를 청소하셨나요?",
+    "CL_DV_HOB_clean_filter_content": "필터를 청소한 후 타이머를 재설정하세요.",
+    "CL_DV_HOB_more_update": "xx 더 많은 업데이트",
+    "CL_DV_TD_child_lock_tip": "아동 잠금 기능은 어린이가 실수로 세탁기를 시작하거나 세탁기를 바꾸는 것을 방지하기 위해 세탁기 조작부의 버튼을 사용할 수 없도록 하는 기능입니다. ",
+    "API Testing": "API 테스트"
 }
