--- a/language/i18n_mk_MK.json
+++ b/language/i18n_mk_MK.json
@@ -2234,7 +2234,7 @@
     "rf_ice_maker_desc": "Ви овозможува да го вклучите/исклучите производителот на мраз во фрижидерот.",
     "diagnosing": "Дијагностицирање...",
     "new_device_found": "Пронајден е нов уред",
-    "new_device_found_tips": "Пронајден е нов уред, изберете „SET Wi-Fi“ за да го поврзете уредот на мрежата.",
+    "new_device_found_tips": "Пронајден е нов уред, изберете „ПОСТАВЕТЕ Wi-Fi“ за да го поврзете уредот на мрежата.",
     "set_wifi_uppercase": "ПОСТАВЕТЕ Wi-Fi",
     "full": "Полна",
     "usage_frequency_metrics": "Метрика на фреквенција на користење",
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "кога ## е @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
-    "enter_city_key": "Внесете град…",
+    "enter_city_key": "Пребарај град",
     "add_key": "Додај",
     "select_logic_relation_ship": "Изберете логичка врска",
     "no_scene_key": "нема сцена",
@@ -4003,5 +4003,23 @@
     "CL_DV_OV_check_to_confirm": "Проверете ја рерната за да потврдите.",
     "CL_CF_CO_buy": "Купи",
     "CL_CF_CS_window_ac_step_2": "Притиснете и задржете го копчето „поврзи“ околу 6 секунди или насочете го далечинскиот управувач кон ресиверот и притиснете го копчето „swing“ 6 пати, додека на екранот не покаже „77“ или светлото за WiFi не почне да трепка.",
-    "CL_DV_OV_default_cooking_intensity": "СТАНДИРАН ИНТЕНЗИТЕТ НА ГОТВЕЊЕ"
+    "CL_DV_OV_default_cooking_intensity": "СТАНДИРАН ИНТЕНЗИТЕТ НА ГОТВЕЊЕ",
+    "CL_DV_HOB_residual_heat_title_pop": "Преостаната топлина",
+    "CL_DV_HOB_residual_heat_content_pop": "Зоната за готвење е сè уште топла. Внимавајте да не ја допирате топлата зона за готвење или да не ставате предмети чувствителни на топлина на неа.",
+    "CL_DV_HOB_hood_mode_setting": "Поставки за режимот на аспираторот",
+    "CL_DV_HOB_refresh_mode_setting": "Поставки за режимот за освежување",
+    "CL_DV_HOB_grease_filter_profile": "Опции за профилот на филтерот за маснотии",
+    "CL_DV_HOB_hood_mode_setting_content": "Поставете го режимот на аспираторот. Кога аспираторот е во автоматски режим, ќе започне веднаш штом ќе започне процесот на готвење.",
+    "CL_DV_HOB_hood_mode_setting_hint": "Ако автоматскиот режим е исклучен, режимот ќе биде рачен.",
+    "CL_DV_HOB_automatic_mode": "Автоматски режим",
+    "CL_DV_HOB_refresh_setting_hint": "Ако е вклучен режимот за освежување, апаратот автоматски ќе почне да го користи режимот за освежување кога аспираторот е активен.",
+    "CL_DV_HOB_grease_filter_profile_content": "Поставете ја долговечноста на филтерот за маснотии. \n\n P1 се користи главно за вриење и лесно пржење. P2 се користи за балансирано вриење и просечно пржење. P3 се користи за тешко пржење.",
+    "CL_DV_HOB_hood_mode_manual": "Прирачник",
+    "CL_DV_HOB_remove_accessory_content": "Дали сте сигурни дека сакате да го отстраните овој додаток?",
+    "CL_DV_HOB_remove_accessory_tips": "кога ќе го отстраните вашиот додаток, веќе нема да добивате ажурирања на фирмверот за него.",
+    "CL_DV_HOB_clean_filter": "ДАЛИ ГО ЧИСТИТЕ ФИЛТЕРОТ?",
+    "CL_DV_HOB_clean_filter_content": "Ресетирајте го тајмерот откако ќе го исчистите филтерот.",
+    "CL_DV_HOB_more_update": "xx повеќе ажурирање",
+    "CL_DV_TD_child_lock_tip": "Заклучувањето за деца ги оневозможува копчињата на контролната табла на апаратот за да спречи децата случајно да започнат или менуваат циклус. ",
+    "API Testing": "Тестирање на API"
 }
