--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -1767,7 +1767,7 @@
     "drying_wizard": "Bantuan Pengeringan",
     "energy_monitoring": "Monitor Tenaga",
     "dry_laundry": "Cucian Kering",
-    "energy": "tenaga",
+    "energy": "Tenaga",
     "enter": "MASUK",
     "drying": "Kering manual",
     "device_is_standby": "Peranti ini dimatikan dan tidak boleh dikawal.",
@@ -2234,7 +2234,7 @@
     "rf_ice_maker_desc": "Membolehkan anda menghidupkan/Mematikan pembuat ais peti sejuk anda.",
     "diagnosing": "Mendiagnosis...",
     "new_device_found": "Peranti baharu ditemui",
-    "new_device_found_tips": "Peranti baharu ditemui, pilih \"SET Wi-Fi\" untuk menyambungkan peranti anda ke rangkaian.",
+    "new_device_found_tips": "Peranti baharu ditemui, pilih \"TETAPKAN Wi-Fi\" untuk menyambungkan peranti anda ke rangkaian.",
     "set_wifi_uppercase": "TETAPKAN Wi-Fi",
     "full": "penuh",
     "usage_frequency_metrics": "Metrik kekerapan penggunaan",
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "bila ## adalah @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
-    "enter_city_key": "Masukkan bandar…",
+    "enter_city_key": "Cari bandar",
     "add_key": "Tambah",
     "select_logic_relation_ship": "Pilih hubungan logik",
     "no_scene_key": "tiada adegan",
@@ -4003,5 +4003,23 @@
     "CL_DV_OV_check_to_confirm": "Periksa ketuhar untuk mengesahkan.",
     "CL_CF_CO_buy": "Beli",
     "CL_CF_CS_window_ac_step_2": "Tekan dan tahan butang \"sambung\" selama lebih kurang 6 saat, atau halakan alat kawalan jauh ke arah penerima dan tekan butang \"hayun\" 6 kali, sehingga paparan menunjukkan \"77\" atau lampu WiFi mula berkelip.",
-    "CL_DV_OV_default_cooking_intensity": "INTENSITI MASAKAN LAILAI"
+    "CL_DV_OV_default_cooking_intensity": "INTENSITI MASAKAN LAILAI",
+    "CL_DV_HOB_residual_heat_title_pop": "Haba sisa",
+    "CL_DV_HOB_residual_heat_content_pop": "Zon memasak masih panas. Berhati-hati untuk tidak menyentuh zon memasak panas atau meletakkan sebarang item sensitif haba di atasnya.",
+    "CL_DV_HOB_hood_mode_setting": "Tetapan mod hud",
+    "CL_DV_HOB_refresh_mode_setting": "Segar semula tetapan mod",
+    "CL_DV_HOB_grease_filter_profile": "Pilihan profil penapis gris",
+    "CL_DV_HOB_hood_mode_setting_content": "Tetapkan mod tudung. Apabila hud berada dalam mod automatik, ia akan bermula sebaik sahaja proses memasak bermula.",
+    "CL_DV_HOB_hood_mode_setting_hint": "Jika mod automatik dimatikan, mod akan manual.",
+    "CL_DV_HOB_automatic_mode": "Mod automatik",
+    "CL_DV_HOB_refresh_setting_hint": "Jika mod muat semula dihidupkan, perkakas akan mula menggunakan mod Muat semula secara automatik apabila hud aktif.",
+    "CL_DV_HOB_grease_filter_profile_content": "Tetapkan jangka hayat penapis gris. \n\n P1 digunakan terutamanya untuk merebus dan menggoreng ringan. P2 digunakan untuk pendidihan seimbang dan penggorengan sederhana. P3 digunakan untuk menggoreng berat.",
+    "CL_DV_HOB_hood_mode_manual": "Manual",
+    "CL_DV_HOB_remove_accessory_content": "Adakah anda pasti mahu mengalih keluar aksesori ini?",
+    "CL_DV_HOB_remove_accessory_tips": "apabila anda mengalih keluar aksesori anda, anda tidak akan menerima kemas kini perisian tegar untuknya lagi.",
+    "CL_DV_HOB_clean_filter": "SUDAHKAH ANDA MEMBERSIHKAN PENAPIS?",
+    "CL_DV_HOB_clean_filter_content": "Tetapkan semula pemasa selepas anda membersihkan penapis.",
+    "CL_DV_HOB_more_update": "xx lebih kemas kini",
+    "CL_DV_TD_child_lock_tip": "Kunci kanak-kanak menyahdayakan butang pada panel kawalan perkakas untuk mengelakkan kanak-kanak daripada memulakan atau menukar kitaran secara tidak sengaja. ",
+    "API Testing": "Ujian API"
 }
