--- a/language/i18n_nl.json
+++ b/language/i18n_nl.json
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "wanneer ## is @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
-    "enter_city_key": "Voer stad in…",
+    "enter_city_key": "Zoek stad",
     "add_key": "Voeg toe",
     "select_logic_relation_ship": "Selecteer logische relatie",
     "no_scene_key": "geen scène",
@@ -4003,5 +4003,23 @@
     "CL_DV_OV_check_to_confirm": "Controleer de oven om dit te bevestigen.",
     "CL_CF_CO_buy": "Kopen",
     "CL_CF_CS_window_ac_step_2": "Houd de knop “connect” ongeveer 6 seconden ingedrukt, of richt de afstandsbediening op de ontvanger en druk 6 keer op de knop “swing”, totdat op het display “77” verschijnt of het wifi-lampje begint te knipperen.",
-    "CL_DV_OV_default_cooking_intensity": "STANDAARD KOOKINTENSITEIT"
+    "CL_DV_OV_default_cooking_intensity": "STANDAARD KOOKINTENSITEIT",
+    "CL_DV_HOB_residual_heat_title_pop": "Restwarmte",
+    "CL_DV_HOB_residual_heat_content_pop": "De kookzone is nog steeds heet. Wees voorzichtig om de hete kookzone niet aan te raken of om hittegevoelige items erop te plaatsen.",
+    "CL_DV_HOB_hood_mode_setting": "Instellingen voor de kapmodus",
+    "CL_DV_HOB_refresh_mode_setting": "Instellingen voor de vernieuwingsmodus",
+    "CL_DV_HOB_grease_filter_profile": "Opties voor vetfilterprofielen",
+    "CL_DV_HOB_hood_mode_setting_content": "Stel de modus van de afzuigkap in. Wanneer de afzuigkap in de automatische modus staat, start deze zodra het kookproces begint.",
+    "CL_DV_HOB_hood_mode_setting_hint": "Als de automatische modus is uitgeschakeld, wordt de modus handmatig ingesteld.",
+    "CL_DV_HOB_automatic_mode": "Automatische modus",
+    "CL_DV_HOB_refresh_setting_hint": "Als de refresh-modus is ingeschakeld, start het apparaat automatisch met de Refresh-modus wanneer de afzuigkap actief is.",
+    "CL_DV_HOB_grease_filter_profile_content": "Stel de levensduur van het vetfilter in. \n\n P1 wordt voornamelijk gebruikt voor koken en licht frituren. P2 wordt gebruikt voor gebalanceerd koken en gemiddeld frituren. P3 wordt gebruikt voor zwaar frituren.",
+    "CL_DV_HOB_hood_mode_manual": "Handmatig",
+    "CL_DV_HOB_remove_accessory_content": "Weet u zeker dat u dit accessoire wilt verwijderen?",
+    "CL_DV_HOB_remove_accessory_tips": "Wanneer u uw accessoire verwijdert, ontvangt u geen firmware-updates meer voor het accessoire.",
+    "CL_DV_HOB_clean_filter": "HEBT U HET FILTER SCHOONGEMAAKT?",
+    "CL_DV_HOB_clean_filter_content": "Stel de timer opnieuw in nadat u het filter hebt schoongemaakt.",
+    "CL_DV_HOB_more_update": "xx meer update",
+    "CL_DV_TD_child_lock_tip": "Met het kinderslot worden de knoppen op het bedieningspaneel van het apparaat uitgeschakeld, zodat kinderen niet per ongeluk een programma kunnen starten of wijzigen. ",
+    "API Testing": "API-testen"
 }
