--- a/language/i18n_ro.json
+++ b/language/i18n_ro.json
@@ -2234,7 +2234,7 @@
     "rf_ice_maker_desc": "Vă permite să porniți/opriți aparatul de gheață din frigider.",
     "diagnosing": "Diagnosticare...",
     "new_device_found": "Dispozitiv nou găsit",
-    "new_device_found_tips": "A fost găsit un dispozitiv nou, selectați „SET Wi-Fi” pentru a vă conecta dispozitivul la rețea.",
+    "new_device_found_tips": "A fost găsit un dispozitiv nou, selectați „SETARE Wi-Fi” pentru a vă conecta dispozitivul la rețea.",
     "set_wifi_uppercase": "SETARE Wi-Fi",
     "full": "Plin",
     "usage_frequency_metrics": "Valorile frecvenței de utilizare",
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "când ## este @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
-    "enter_city_key": "Intră în oraș...",
+    "enter_city_key": "Caută oraș",
     "add_key": "Adaugă",
     "select_logic_relation_ship": "Selectați relația logică",
     "no_scene_key": "fără scenă",
@@ -4003,5 +4003,23 @@
     "CL_DV_OV_check_to_confirm": "Verificați cuptorul pentru a confirma.",
     "CL_CF_CO_buy": "Cumpăra",
     "CL_CF_CS_window_ac_step_2": "Apăsați și mențineți apăsat butonul „conectare” timp de aproximativ 6 secunde sau îndreptați telecomanda spre receptor și apăsați butonul „swing” de 6 ori, până când afișajul arată „77” sau lumina WiFi începe să clipească.",
-    "CL_DV_OV_default_cooking_intensity": "INTENSITATEA DE GATIRE IMPACT"
+    "CL_DV_OV_default_cooking_intensity": "INTENSITATEA DE GATIRE IMPACT",
+    "CL_DV_HOB_residual_heat_title_pop": "Căldura reziduală",
+    "CL_DV_HOB_residual_heat_content_pop": "Zona de gătit este încă fierbinte. Aveți grijă să nu atingeți zona fierbinte de gătit sau să plasați articole sensibile la căldură pe ea.",
+    "CL_DV_HOB_hood_mode_setting": "Setările modului Hood",
+    "CL_DV_HOB_refresh_mode_setting": "Setările modului de reîmprospătare",
+    "CL_DV_HOB_grease_filter_profile": "Opțiuni de profil pentru filtru de grăsime",
+    "CL_DV_HOB_hood_mode_setting_content": "Setați modul hotei. Când hota este în modul automat, va porni imediat ce începe procesul de gătit.",
+    "CL_DV_HOB_hood_mode_setting_hint": "Dacă modul automat este dezactivat, modul va fi manual.",
+    "CL_DV_HOB_automatic_mode": "Modul automat",
+    "CL_DV_HOB_refresh_setting_hint": "Dacă modul de reîmprospătare este activat, aparatul va începe automat să utilizeze modul de reîmprospătare când hota este activă.",
+    "CL_DV_HOB_grease_filter_profile_content": "Setați longevitatea filtrului de grăsime. \n\n P1 este folosit în principal pentru fierbere și prăjire ușoară. P2 este folosit pentru fierbere echilibrată și prăjire medie. P3 este folosit pentru prăjirea grea.",
+    "CL_DV_HOB_hood_mode_manual": "Manual",
+    "CL_DV_HOB_remove_accessory_content": "Sigur doriți să eliminați acest accesoriu?",
+    "CL_DV_HOB_remove_accessory_tips": "când scoateți accesoriul, nu veți mai primi actualizări de firmware pentru acesta.",
+    "CL_DV_HOB_clean_filter": "AI CURAT FILTRUL?",
+    "CL_DV_HOB_clean_filter_content": "Resetați cronometrul după ce ați curățat filtrul.",
+    "CL_DV_HOB_more_update": "xx mai multă actualizare",
+    "CL_DV_TD_child_lock_tip": "Blocarea pentru copii dezactivează butoanele de pe panoul de control al aparatului pentru a preveni copiii să pornească sau să schimbe accidental un ciclu. ",
+    "API Testing": "Testare API"
 }
