--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -2820,7 +2820,7 @@
     "asko_wine_sabbath_deactivate_c": "Режим субботы активируется на вашем винном шкафу. Выполните следующие действия, чтобы деактивировать его:",
     "asko_wine_sabbath_deactivate_tip": "Нажмите и удерживайте клавишу блокировки <b>00_11_22</b> на винном шкафу в течение <b>3 секунд</b>.",
     "asko_wine_sabbath_deactivate_tip_1": "Чтобы полностью отключить режим субботы, выключите переключатель в меню настроек.",
-    "to_settings": "Перейти к настройкам",
+    "to_settings": "Настройки",
     "turn_off_sabbath_key_lock": "Сначала отключите режим субботы, нажав клавишу блокировки на приборе и удерживая ее в течение 3 секунд.",
     "program_will_start_after": "Программа начнется после:",
     "wine_sabbath_toast": "Активируется режим субботы. Чтобы снова использовать все функции, отключите режим субботы.",
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "когда ## есть @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
-    "enter_city_key": "Введите город…",
+    "enter_city_key": "Поиск города",
     "add_key": "Добавить",
     "select_logic_relation_ship": "Выберите логическую связь",
     "no_scene_key": "нет сцены",
@@ -4003,5 +4003,23 @@
     "CL_DV_OV_check_to_confirm": "Проверьте духовку, чтобы убедиться.",
     "CL_CF_CO_buy": "Купить",
     "CL_CF_CS_window_ac_step_2": "Нажмите и удерживайте кнопку «подключиться» в течение примерно 6 секунд или направьте пульт дистанционного управления на приемник и нажмите кнопку «покачивание» 6 раз, пока на дисплее не отобразится «77» или индикатор WiFi не начнет мигать.",
-    "CL_DV_OV_default_cooking_intensity": "ИНТЕНСИВНОСТЬ ПРИГОТОВЛЕНИЯ ПО УМОЛЧАНИЮ"
+    "CL_DV_OV_default_cooking_intensity": "ИНТЕНСИВНОСТЬ ПРИГОТОВЛЕНИЯ ПО УМОЛЧАНИЮ",
+    "CL_DV_HOB_residual_heat_title_pop": "Остаточное тепло",
+    "CL_DV_HOB_residual_heat_content_pop": "Зона приготовления пищи все еще горячая. Будьте осторожны, не прикасайтесь к горячей зоне приготовления пищи и не ставьте на нее предметы, чувствительные к теплу.",
+    "CL_DV_HOB_hood_mode_setting": "Настройки режима вытяжки",
+    "CL_DV_HOB_refresh_mode_setting": "Обновить настройки режима",
+    "CL_DV_HOB_grease_filter_profile": "Варианты профиля жирового фильтра",
+    "CL_DV_HOB_hood_mode_setting_content": "Установите режим работы вытяжки. Когда вытяжка находится в автоматическом режиме, она включится сразу же после начала процесса приготовления пищи.",
+    "CL_DV_HOB_hood_mode_setting_hint": "Если автоматический режим выключен, будет использоваться ручной режим.",
+    "CL_DV_HOB_automatic_mode": "Автоматический режим",
+    "CL_DV_HOB_refresh_setting_hint": "Если режим обновления включен, прибор автоматически начнет использовать режим обновления при активной вытяжке.",
+    "CL_DV_HOB_grease_filter_profile_content": "Установите срок службы жирового фильтра. \n\n P1 используется в основном для варки и легкой жарки. P2 используется для сбалансированного варки и средней жарки. P3 используется для сильной жарки.",
+    "CL_DV_HOB_hood_mode_manual": "Руководство",
+    "CL_DV_HOB_remove_accessory_content": "Вы уверены, что хотите удалить этот аксессуар?",
+    "CL_DV_HOB_remove_accessory_tips": "После удаления аксессуара вы больше не будете получать для него обновления прошивки.",
+    "CL_DV_HOB_clean_filter": "ВЫ ЧИСТИЛИ ФИЛЬТР?",
+    "CL_DV_HOB_clean_filter_content": "После очистки фильтра сбросьте таймер.",
+    "CL_DV_HOB_more_update": "xx еще обновление",
+    "CL_DV_TD_child_lock_tip": "Блокировка от детей блокирует кнопки на панели управления прибора, чтобы дети не могли случайно запустить или изменить цикл. ",
+    "API Testing": "Тестирование API"
 }
