--- a/language/i18n_tr.json
+++ b/language/i18n_tr.json
@@ -1767,7 +1767,7 @@
     "drying_wizard": "Kurutma Desteği",
     "energy_monitoring": "Enerji Monitörü",
     "dry_laundry": "Kuru Çamaşırhane",
-    "energy": "enerji",
+    "energy": "Enerji",
     "enter": "GİRMEK",
     "drying": "Manuel kuru",
     "device_is_standby": "Cihaz kapalı ve kontrol edilemiyor.",
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "ne zaman ## dir @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
-    "enter_city_key": "Şehir girin…",
+    "enter_city_key": "Şehir ara",
     "add_key": "Ekle",
     "select_logic_relation_ship": "Mantık ilişkisini seçin",
     "no_scene_key": "sahne yok",
@@ -4003,5 +4003,23 @@
     "CL_DV_OV_check_to_confirm": "Onaylamak için fırını kontrol edin.",
     "CL_CF_CO_buy": "Satın almak",
     "CL_CF_CS_window_ac_step_2": "“Bağlan” butonuna yaklaşık 6 saniye basılı tutun veya uzaktan kumandayı alıcıya doğrultun ve ekranda “77” yazısı görünene veya WiFi ışığı yanıp sönmeye başlayana kadar “salınım” butonuna 6 kez basın.",
-    "CL_DV_OV_default_cooking_intensity": "ÖN TANIMLI PİŞİRME YOĞUNLUĞU"
+    "CL_DV_OV_default_cooking_intensity": "ÖN TANIMLI PİŞİRME YOĞUNLUĞU",
+    "CL_DV_HOB_residual_heat_title_pop": "Artık ısı",
+    "CL_DV_HOB_residual_heat_content_pop": "Pişirme alanı hala sıcaktır. Sıcak pişirme alanına dokunmamaya veya üzerine ısıya duyarlı herhangi bir eşya koymamaya dikkat edin.",
+    "CL_DV_HOB_hood_mode_setting": "Kaput modu ayarları",
+    "CL_DV_HOB_refresh_mode_setting": "Yenileme modu ayarları",
+    "CL_DV_HOB_grease_filter_profile": "Yağ filtresi profil seçenekleri",
+    "CL_DV_HOB_hood_mode_setting_content": "Davlumbazın modunu ayarlayın. Davlumbaz otomatik modda olduğunda, pişirme işlemi başlar başlamaz çalışmaya başlayacaktır.",
+    "CL_DV_HOB_hood_mode_setting_hint": "Otomatik mod kapalı ise manuel mod olacaktır.",
+    "CL_DV_HOB_automatic_mode": "Otomatik mod",
+    "CL_DV_HOB_refresh_setting_hint": "Yenileme modu açıksa, davlumbaz aktif olduğunda cihaz otomatik olarak Yenileme modunu kullanmaya başlayacaktır.",
+    "CL_DV_HOB_grease_filter_profile_content": "Yağ filtresinin ömrünü ayarlayın. \n\n P1 esas olarak kaynatma ve hafif kızartma için kullanılır. P2 dengeli kaynatma ve orta kızartma için kullanılır. P3 ise ağır kızartma için kullanılır.",
+    "CL_DV_HOB_hood_mode_manual": "Manuel",
+    "CL_DV_HOB_remove_accessory_content": "Bu aksesuarı kaldırmak istediğinizden emin misiniz?",
+    "CL_DV_HOB_remove_accessory_tips": "Aksesuarınızı çıkardığınızda artık onun için yazılım güncellemesi almayacaksınız.",
+    "CL_DV_HOB_clean_filter": "FİLTREYİ TEMİZLEDİNİZ Mİ?",
+    "CL_DV_HOB_clean_filter_content": "Filtreyi temizledikten sonra zamanlayıcıyı sıfırlayın.",
+    "CL_DV_HOB_more_update": "xx daha fazla güncelleme",
+    "CL_DV_TD_child_lock_tip": "Çocuk kilidi, çocukların yanlışlıkla bir programı başlatmasını veya değiştirmesini önlemek için cihazın kontrol panelindeki düğmeleri devre dışı bırakır. ",
+    "API Testing": "API Testi"
 }
