--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -2234,7 +2234,7 @@
     "rf_ice_maker_desc": "आपको अपने रेफ्रिजरेटर आइस मेकर को चालू/बंद करने की अनुमति देता है।",
     "diagnosing": "निदान...",
     "new_device_found": "नया उपकरण मिला",
-    "new_device_found_tips": "नया डिवाइस मिला, अपने डिवाइस को नेटवर्क से कनेक्ट करने के लिए \"SET Wi-Fi\" का चयन करें।",
+    "new_device_found_tips": "नया डिवाइस मिला, अपने डिवाइस को नेटवर्क से कनेक्ट करने के लिए \"वाई-फाई सेट करें\" का चयन करें।",
     "set_wifi_uppercase": "वाई-फाई सेट करें",
     "full": "भरा हुआ",
     "usage_frequency_metrics": "उपयोग आवृत्ति मेट्रिक्स",
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "जब ## है @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
-    "enter_city_key": "शहर दर्ज करें…",
+    "enter_city_key": "शहर खोजें",
     "add_key": "जोड़ें",
     "select_logic_relation_ship": "वैज्ञानिक संबंध चुनें",
     "no_scene_key": "कोई दृश्य नहीं",
@@ -4003,5 +4003,23 @@
     "CL_DV_OV_check_to_confirm": "पुष्टि के लिए ओवन की जाँच करें।",
     "CL_CF_CO_buy": "खरीदना",
     "CL_CF_CS_window_ac_step_2": "\"कनेक्ट\" बटन को लगभग 6 सेकंड तक दबाकर रखें, या रिमोट कंट्रोलर को रिसीवर पर रखें और \"स्विंग\" बटन को 6 बार दबाएं, जब तक कि डिस्प्ले पर \"77\" न दिखाई दे या वाईफाई लाइट चमकने न लगे।",
-    "CL_DV_OV_default_cooking_intensity": "डिफ़ॉल्ट खाना पकाने की तीव्रता"
+    "CL_DV_OV_default_cooking_intensity": "डिफ़ॉल्ट खाना पकाने की तीव्रता",
+    "CL_DV_HOB_residual_heat_title_pop": "अवशिष्ट ऊष्मा",
+    "CL_DV_HOB_residual_heat_content_pop": "खाना पकाने का क्षेत्र अभी भी गर्म है। सावधान रहें कि गर्म खाना पकाने वाले क्षेत्र को न छुएं और न ही उस पर कोई गर्मी-संवेदनशील वस्तु रखें।",
+    "CL_DV_HOB_hood_mode_setting": "हुड मोड सेटिंग्स",
+    "CL_DV_HOB_refresh_mode_setting": "रिफ्रेश मोड सेटिंग्स",
+    "CL_DV_HOB_grease_filter_profile": "ग्रीस फ़िल्टर प्रोफ़ाइल विकल्प",
+    "CL_DV_HOB_hood_mode_setting_content": "हुड का मोड सेट करें: जब हुड स्वचालित मोड में होगा, तो खाना पकाने की प्रक्रिया शुरू होते ही यह चालू हो जाएगा।",
+    "CL_DV_HOB_hood_mode_setting_hint": "यदि स्वचालित मोड बंद है, तो मोड मैनुअल होगा।",
+    "CL_DV_HOB_automatic_mode": "स्वचालित मोड",
+    "CL_DV_HOB_refresh_setting_hint": "यदि रिफ्रेश मोड चालू है, तो हुड सक्रिय होने पर उपकरण स्वचालित रूप से रिफ्रेश मोड का उपयोग शुरू कर देगा।",
+    "CL_DV_HOB_grease_filter_profile_content": "ग्रीस फिल्टर की दीर्घायु निर्धारित करें। \n\n P1 का उपयोग मुख्य रूप से उबालने और हल्का तलने के लिए किया जाता है। P2 का उपयोग संतुलित उबालने और औसत तलने के लिए किया जाता है। P3 का उपयोग भारी तलने के लिए किया जाता है।",
+    "CL_DV_HOB_hood_mode_manual": "नियमावली",
+    "CL_DV_HOB_remove_accessory_content": "क्या आप वाकई इस सहायक उपकरण को हटाना चाहते हैं?",
+    "CL_DV_HOB_remove_accessory_tips": "जब आप अपनी एक्सेसरी हटाएंगे, तो आपको इसके लिए फर्मवेयर अपडेट प्राप्त नहीं होंगे।",
+    "CL_DV_HOB_clean_filter": "क्या आपने फ़िल्टर साफ़ किया है?",
+    "CL_DV_HOB_clean_filter_content": "फ़िल्टर साफ़ करने के बाद टाइमर को रीसेट करें।",
+    "CL_DV_HOB_more_update": "xx अधिक अपडेट",
+    "CL_DV_TD_child_lock_tip": "चाइल्ड लॉक उपकरण के नियंत्रण पैनल पर स्थित बटनों को निष्क्रिय कर देता है, जिससे बच्चों को गलती से उपकरण चालू करने या साइकिल बदलने से रोका जा सके। ",
+    "API Testing": "एपीआई परीक्षण"
 }
